<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="about_body">&lt;b&gt;Google I/O 2016&lt;/b&gt;&lt;br&gt; Version
        %s&lt;br&gt;&lt;br&gt; &lt;a href=http://m.google.com/utos&gt; Terms of Service
        &lt;/a&gt;&lt;br&gt;&lt;br&gt; &lt;a href=http://www.google.com/policies/privacy/&gt;
        Privacy Policy
        &lt;/a&gt;</string>
    <plurals name="schedule_block_subtitle"
             description="Shown in the schedule to indicate how many sessions are available on that particular time slot.">
        <item quantity="one"><xliff:g id="number_of_sessions">%1$d</xliff:g> available session</item>
        <item quantity="other"><xliff:g id="number_of_sessions">%1$d</xliff:g> available sessions</item>
    </plurals>
    <plurals name="session_notification_text"
             description="Shows as a notification on the system bar to alert user that some of their sessions are about to begin.">
        <item quantity="one">and 1 other starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
        <item quantity="other">and <xliff:g id="num_sessions">%2$d</xliff:g> others starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
    </plurals>
    <plurals name="session_notification_ticker"
             description="Shown as a notification on the system bar to alert user that some of their sessions are about to begin.">
        <item quantity="one">1 session is about to start.</item>
        <item quantity="other">%d sessions are about to start.</item>
    </plurals>
    <plurals name="session_plurals"
             description="Indicates a certain number of sessions.">
        <item quantity="one">1 session</item>
        <item quantity="other">%1$d sessions</item>
    </plurals>
    <plurals name="session_notification_title">
        <item quantity="one">1 session is starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
        <item quantity="other"><xliff:g id="num_sessions">%2$d</xliff:g> sessions are starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
    </plurals>
    <string name="about_main"><![CDATA[
        <b>Google I/O 2016</b><br>
        Version %s
    ]]></string>
    <string name="about_terms">Terms of Service</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_eula">End User License Agreement</string>
    <string name="about_licenses">Open Source Licenses</string>
    <string name="accept">Accept</string>
    <string name="add_account">Add Account</string>
    <string name="add_to_schedule">Add to schedule</string>
    <string name="add_to_schedule_desc">Button to add session to your schedule</string>
    <string name="all_sessions">All Sessions</string>
    <string name="all_themes">All Themes</string>
    <string name="all_topics">All Topics</string>
    <string description="Hint for adding other session feedback" name="session_feedback_tell_us">Other session feedback?</string>
    <string name="all_types">All Types</string>
    <string name="all_years">All Years</string>
    <string name="app_name">Google I/O 2016</string>
    <string name="attending_in_person">In Person</string>
    <string name="attending_remotely">Remotely</string>
    <string name="browse_events">Browse events</string>
    <string name="browse_sessions">BROWSE SESSIONS</string>
    <string name="calltoaction_wifi_configure"><![CDATA[
        <br><br>Tap \'Add Wi-Fi Network\' to proceed.
    ]]></string>
    <string name="calltoaction_wifi_settings"><![CDATA[
        <br><br>Tap \'Open Wi-Fi Settings\' to enable Wi-Fi.
    ]]></string>
    <string name="close_and_go_back">Close and go back</string>
    <string name="close_detail_pane">Close detail pane</string>
    <string name="cancel">Cancel</string>
    <string name="data_stale_warning">The data you are viewing may be out of date.</string>
    <string name="day_title_today">Today</string>
    <string name="day_title_tomorrow">Tomorrow</string>
    <string name="day_title_yesterday">Yesterday</string>
    <string name="day_n">DAY %d</string>
    <string name="decline">Decline</string>
    <string name="description_about">About</string>
    <string name="description_add_schedule">Add to schedule</string>
    <string name="description_app_feedback">App Feedback</string>
    <string name="description_app_feedback_old">Feedback</string>
    <string name="description_captions">Captions</string>
    <string name="description_configure_wifi">Configure Wi-Fi</string>
    <string name="description_debug" translatable="false">Debug and tests</string>
    <string name="description_i_o_extended">I/O Extended</string>
    <string name="description_map">Map</string>
    <string name="description_presentation">Toggle Screen Output</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_remove_schedule">Remove from schedule</string>
    <string name="description_search">Search</string>
    <string name="description_settings">Settings</string>
    <string name="description_setup_wifi_body"><![CDATA[
        Since you\'re attending in person, we can set up this device to access the conference
        Wi-Fi network (5Ghz only). By configuring your Wi-Fi now, you\'ll help prevent network
        congestion.
    ]]></string>
    <string name="description_share">Share</string>
    <string name="description_social_stream">View Google+ stream</string>
    <string name="speaker_social_page">Go to the %1$s page for %2$s</string>
    <string name="social_io15_gplus_content_description">
        Go to Google Plus with io15 hashtag
    </string>
    <string name="social_io15_twitter_content_description">
        Go to Twitter with io15 hashtag
    </string>
    <string name="social_gplus_devs" translatable="false">+googledevelopers</string>
    <string name="social_gplus_devs_content_description">Go to Google Developers on Google Plus</string>
    <string name="social_twitter_devs" translatable="false">\@googledevs</string>
    <string name="social_twitter_devs_content_description">Go to Google Developers on Twitter</string>
    <string name="social_extended" translatable="false">extended</string>
    <string name="social_extended_gplus_content_description">
        Go to Google Plus with extended hashtag
    </string>
    <string name="social_extended_twitter_content_description">
        Go to Twitter with extended hashtag
    </string>
    <string name="social_request" translatable="false">request</string>
    <string name="social_request_gplus_content_description">
        Go to Google Plus with request hashtag
    </string>
    <string name="social_request_twitter_content_description">
        Go to Twitter with request hashtag
    </string>
    <string name="io15_logo_not_clickable">IO15 logo not clickable</string>
    <string name="io15_extended_logo_not_clickable">IO15 extended logo not clickable</string>
    <string name="io15_request_logo_not_clickable">IO15 request logo not clickable</string>
    <string name="io_logo_not_clickable">IO logo not clickable</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="empty_captions">No captions found for this session.</string>
    <string name="empty_session_detail">No session details found.</string>
    <string name="session_live_streamed">Live streamed</string>
    <string name="session_watch_live">Watch Live</string>
    <string name="session_watch">Watch</string>
    <string name="session_replay">Replay</string>
    <string name="empty_sessions">No sessions found.</string>
    <string name="empty_waiting_for_sync">Waiting for sync&#8230;</string>
    <string name="empty_widget_text">No more upcoming sessions.\nSee you next year!</string>
    <string name="empty_widget_text_signed_out">Touch the Google I/O 2016 logo above to sign in
        and begin using the app.</string>
    <string name="ended_sessions">Ended sessions</string>
    <string name="explore_attending_in_person_toast">Attending I/O in person (you can change this in Settings)</string>
    <string name="explore_attending_remotely_toast">Attending I/O remotely (you can change this in Settings)</string>
    <string name="give_feedback">Yes</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="google_account_required_message">To use this application, you must have at least one Google account on your device.</string>
    <string name="google_account_required_title">Google Account Required</string>
    <string name="google_i_o_year">I/O <xliff:g id="year">%1$d</xliff:g></string>
    <string name="got_it">Got it</string>
    <string name="io14_hashtag" translatable="false">#io14</string>
    <string name="keynote_group_title">Keynotes</string>
    <string name="live_available">LIVE</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="pref_conf_message_cards_enabled_title">Show conference messages</string>
    <string name="pref_conf_message_cards_enabled_description"
            description="Description in the Settings screen for the setting that enables display of
            cards with conference information in the explore screen.">Display cards with relevant conference information on the Explore screen. These are time based and may include promotional messages from partners.</string>
    <string name="pref_analytics_enabled_title">Send anonymous usage statistics</string>
    <string name="pref_analytics_enabled_description">Send anonymous statistics about app usage
    to Google.</string>
    <string name="pref_attendee_at_venue_description">Display all sessions and on-site events. If unchecked, only live-streamed sessions will be shown.</string>
    <string name="pref_attendee_at_venue_title">I\'ll be at Google I/O!</string>
    <string name="pref_local_times_description">Use your local time instead of the conference’s local time.</string>
    <string name="pref_local_times_title">Show local times</string>
    <string name="pref_notify_feedback_description">Display notifications asking for your feedback about your selected sessions.</string>
    <string name="pref_notify_feedback_title">Notify me to send feedback</string>
    <string name="pref_notify_starred_sessions_description">Display a notification when your selected sessions are about to begin.</string>
    <string name="pref_notify_starred_sessions_title">Notify me about my sessions</string>
    <string name="pref_sync_with_calendar_description">Automatically sync your sessions to Google Calendar.</string>
    <string name="pref_sync_with_calendar_title">Sync with Google Calendar</string>
    <string description="Session feedback section title"
            name="session_feedback_content">The content:</string>
    <string description="A positive relevance session feedback option"
            name="session_feedback_rel">Pertinent</string>
    <string description="A negative relevance session feedback option"
            name="session_feedback_notrel">Not Pertinent</string>
    <string name="session_feedback_advanced">Too advanced</string>
    <string name="session_feedback_basic">Too basic</string>
    <string name="session_feedback_great">Toll</string>
    <string name="session_feedback_notgreat">Nicht so toll</string>
    <string name="session_feedback_other">Anything else we should know?</string>
    <string name="session_feedback_outstanding">Outstanding</string>
    <string name="session_feedback_poor">Poor</string>
    <string name="session_feedback_relevance"> How relevant was this session to your projects?  </string>
    <string name="session_feedback_speaker_quality">Speaker quality:</string>
    <string name="session_feedback_submitlink">Submit Feedback</string>
</resources>