<!--
  Copyright 2013 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp">

    <SeekBar
        android:id="@+id/rating_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:background="@drawable/rating_bar_background"
        android:thumb="@drawable/scrubber_thumb"
        android:thumbOffset="@dimen/rating_bar_thumb_offset"
        android:progressDrawable="@android:color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:clipToPadding="false">

        <TextView android:id="@+id/rating_bar_label_1"
            style="@style/FeedbackRatingBarLabelOne"
            android:text="@string/number_1" />

        <View android:layout_width="4dp"
            android:layout_height="match_parent" />

        <TextView android:id="@+id/rating_bar_label_2"
            style="@style/FeedbackRatingBarLabelTwo"
            android:text="@string/number_2" />

        <TextView android:id="@+id/rating_bar_label_3"
            style="@style/FeedbackRatingBarLabelThree"
            android:text="@string/number_3" />

        <TextView android:id="@+id/rating_bar_label_4"
            style="@style/FeedbackRatingBarLabelFour"
            android:text="@string/number_4" />

        <View android:layout_width="4dp"
            android:layout_height="match_parent" />

        <TextView android:id="@+id/rating_bar_label_5"
            style="@style/FeedbackRatingBarLabelFive"
            android:text="@string/number_5" />

    </LinearLayout>

</FrameLayout>